environments/default/test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: test
  labels:
    app: test
spec:
  replicas: 5
  selector:
    matchLabels:
      app: test
      tier: frontend
  template:
    metadata:
      labels:
        app: test
        tier: frontend
    spec:
      containers:
      - name: test-container-app
        image: devopsjourney1/mywebapp
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi" 
            cpu: "50m"    # 500milliCPUs (1/2 CPU)
          limits:
            memory: "128Mi"
            cpu: "100m"
