environments/default/test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: test
spec:
  rules:
  - host: test.pollux.peciak.xyz
    http:
      paths:
      - backend:
          service:
            name: test
            port: 
              number: 80
        path: /
        pathType: Prefix  

  tls:
  - hosts:
    - test.pollux.peciak.xyz
    secretName: test-pollux-peciak-xyz-tls
