environments/default/test/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test
  namespace: test
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test
    tier: frontend
